# ifood-case

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/notebooks/: 00_setup.py  01_build_silver.py  02_build_gold.py  03_dashboard_walkthrough.py
src/core/: __init__.py  runner.py
src/core/connector/: __init__.py  loader.py
src/core/spark/: __init__.py  spark.py
src/core/sync/: __init__.py  sync.py
src/core/transform/: __init__.py  transform_service.py
tests/: conftest.py
tests/integration/: test_local_pipeline.py
tests/unit/: test_connector.py  test_gold.py  test_runner.py  test_silver.py  test_spark_service.py  test_sync.py
