[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ifood-case"
version = "0.1.0"
description = "NYC Yellow Taxi data pipeline for the iFood technical case"
requires-python = ">=3.10,<3.13"
dependencies = []

[project.optional-dependencies]
local = [
    "delta-spark==3.3.2",
    "pyspark==3.5.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"analysis/notebooks/*.py" = ["E402", "E501", "F821", "I001"]
